<resources>
    <string name="app_name">CAACDeviceControl</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- 登录注册 -->
    <string name="login">登录</string>
    <string name="registe">注册</string>
    <string name="login_hint">用户名/手机号</string>
    <string name="password_hint">密码</string>
    <string name="nick_name">昵&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;称:</string>
    <string name="real_name">姓&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;名:</string>
    <string name="group">科&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;室:</string>
    <string name="phone_number">手&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;机:</string>
    <string name="password">密&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;码:</string>
    <string name="photo">头像</string>
    <string name="commit_passeord">确认密码:</string>
    <string name="change_passeord">修改密码</string>

    <!-- 注册 -->
    <string name="username_not_null">昵称不能为空哦!</string>
    <string name="realname_not_null">姓名不能为空哦!</string>
    <string name="phonenumber_not_null">电话不能为空哦!</string>
    <string name="password_not_null">密码不能为空哦!</string>
    <string name="password_not_equal">两次输入的密码不相同哦!</string>
    <string name="group_not_null">科室不能为空哦!</string>

    <string name="exception_dynamics">故障动态</string>
    <string name="group_dynamics">科室动态</string>
    <string name="add_dynamics">发布动态</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
