<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.caac.android.caacdevicecontrol.android.UserInfoActivity"
    android:background="@mipmap/registe_bg"
    android:orientation="vertical"
    xmlns:app1="http://schemas.android.com/apk/res-auto">


    <com.caac.android.caacdevicecontrol.view.CircleImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        app1:civ_border_color="@color/light_black"
        app1:civ_border_width="2dp"/>

    <LinearLayout
        android:id="@+id/ll_nick_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:background="@color/translation_white"
        >
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gary_line"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">
            <TextView
                android:id="@+id/tv_nick_name_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/nick_name"
                android:textSize="18sp"
                android:textColor="@color/light_black"
                />
            <TextView
                android:id="@+id/tv_nick_name"
                android:layout_toRightOf="@id/tv_nick_name_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textSize="18sp"
                android:textColor="@color/light_black"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_alignParentRight="true"
                android:layout_gravity="right"
                android:src="@mipmap/icon_go"/>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/gary_line"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:background="@color/translation_white"
        >
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gary_line"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">
            <TextView
                android:id="@+id/tv_user_name_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/real_name"
                android:textSize="18sp"
                android:textColor="@color/light_black"
                />
            <TextView
                android:id="@+id/tv_user_name"
                android:layout_toRightOf="@id/tv_user_name_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textSize="18sp"
                android:textColor="@color/light_black"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_alignParentRight="true"
                android:layout_gravity="right"
                android:src="@mipmap/icon_go"/>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/gary_line"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:background="@color/translation_white"
        >
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gary_line"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">
            <TextView
                android:id="@+id/tv_group_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/group"
                android:textSize="18sp"
                android:textColor="@color/light_black"
                />
            <TextView
                android:id="@+id/tv_group"
                android:layout_toRightOf="@id/tv_group_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textSize="18sp"
                android:textColor="@color/light_black"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_alignParentRight="true"
                android:layout_gravity="right"
                android:src="@mipmap/icon_go"/>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/gary_line"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:background="@color/translation_white"
        >
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gary_line"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">
            <TextView
                android:id="@+id/tv_phone_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/phone_number"
                android:textSize="18sp"
                android:textColor="@color/light_black"
                />
            <TextView
                android:id="@+id/tv_phone"
                android:layout_toRightOf="@id/tv_phone_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textSize="18sp"
                android:textColor="@color/light_black"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_alignParentRight="true"
                android:layout_gravity="right"
                android:src="@mipmap/icon_go"/>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/gary_line"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_pass_word"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:background="@color/translation_white"
        >
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gary_line"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">
            <TextView
                android:id="@+id/tv_pass_word_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/change_passeord"
                android:textSize="18sp"
                android:textColor="@color/light_black"
                />
            <TextView
                android:id="@+id/tv_pass_word"
                android:layout_toRightOf="@id/tv_pass_word_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textSize="18sp"
                android:textColor="@color/light_black"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_alignParentRight="true"
                android:layout_gravity="right"
                android:src="@mipmap/icon_go"/>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/gary_line"/>
    </LinearLayout>
</LinearLayout>
